2_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: "2024-06-18T22:54:33Z"
  generation: 1
  labels:
    app: examen
  name: examen
  namespace: examen
  resourceVersion: "3045749"
  uid: 4a5bdcdd-eee0-41d3-af51-8d1246041a1b
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: examen
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: examen
    spec:
      containers:
      - image: nginx
        imagePullPolicy: Always
        name: nginx
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
