3_service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: examen
  name: examen
  namespace: examen
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: examen
  type: LoadBalancer
status:
  loadBalancer: {}
